<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account">Account: </string>
    <string name="hint">Input Your Account</string>
    <string name="passwd">Password: </string>
    <string name="remember">Remember Password</string>
    <string name="login">Login</string>

</resources>